@@ -1,3 +1,7 @@
+2007-08-26    <tino@firebird.03.softkill.net>
+
+	* alarm.h (tino_alarm): added, wrapper to alarm()
+
 2007-08-25    <tino@firebird.03.softkill.net>
 
 	* sock.h (tino_sock_select_timeoutEn): routine prototype changed
